# lezgo

./: README.md  gosted.go  server.go
courtekm/: Cargo.toml  README.md
courtekm/src/: consts.rs  funcs.rs  impls.rs  interfaces.rs  main.rs  models.rs
gosted/: gosted.go
server/: server.go
